<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.atextor</groupId>
    <artifactId>syntax-annotation</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- For Turtle syntax checker -->
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-core</artifactId>
            <version>4.4.0</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>

        <!-- For JSON syntax checker -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.3</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>com.google.testing.compile</groupId>
            <artifactId>compile-testing</artifactId>
            <version>0.19</version>
            <scope>test</scope>
        </dependency>
        <!-- Use junit 4 instead of jupiter because compile-testing requires it -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.23.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-compile</id>
                            <configuration>
                                <compilerArgument>-proc:none</compilerArgument>
                                <includes>
                                    <include>**/*.java</include>
                                </includes>
                                <compilerArgs>
                                    <arg>--add-exports</arg>
                                    <arg>jdk.compiler/com.sun.tools.javac.main=de.atextor.syntax.annotation</arg>
                                    <arg>--add-exports</arg>
                                    <arg>jdk.compiler/com.sun.tools.javac.util=de.atextor.syntax.annotation</arg>
                                    <arg>--add-exports</arg>
                                    <arg>jdk.compiler/com.sun.tools.javac.processing=de.atextor.syntax.annotation</arg>
                                </compilerArgs>
                            </configuration>
                        </execution>
                        <execution>
                            <id>compile-project</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <configuration>
                                <compilerArgs>
                                    <arg>--add-exports</arg>
                                    <arg>jdk.compiler/com.sun.tools.javac.main=de.atextor.syntax.annotation</arg>
                                    <arg>--add-exports</arg>
                                    <arg>jdk.compiler/com.sun.tools.javac.util=de.atextor.syntax.annotation</arg>
                                    <arg>--add-exports</arg>
                                    <arg>jdk.compiler/com.sun.tools.javac.processing=de.atextor.syntax.annotation</arg>
                                </compilerArgs>
                            </configuration>
                        </execution>
                        <execution>
                            <id>default-testCompile</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                            <configuration>
                                <compilerArgs>
                                    <arg>--add-exports</arg>
                                    <arg>jdk.compiler/com.sun.tools.javac.tree=de.atextor.syntax.annotation</arg>
                                    <arg>--add-exports</arg>
                                    <arg>jdk.compiler/com.sun.tools.javac.tree=de.atextor.syntax.annotation.test</arg>
                                </compilerArgs>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M7</version>
                    <configuration>
                        <argLine>--add-exports jdk.compiler/com.sun.tools.javac.tree=de.atextor.syntax.annotation</argLine>
                        <forkCount>1</forkCount>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
